# youdao-rs

./: .gitignore  Cargo.toml  README.md
src/: db.rs  dict.glade  examination.glade  examination.rs  gtkui.rs  kugou.rs  main.rs  mplayer.rs  questions.glade~  questions.rs  search.rs  youdao.rs
