[package]
name = "gtk-demo"
version = "0.1.0"
authors = ["jvaemape <jvaemape@163.com>"]

[dependencies]
# gtk = { git = "https://github.com/gtk-rs/gtk.git" }
curl = { git = "https://github.com/alexcrichton/curl-rust.git" }
html5ever = "*"
scraper = "*"
regex = "*"
glib = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
cairo-rs = "^0"
